fix overflowing links

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 a {
     color: #000000;
     text-decoration: none;
+    word-wrap: break-word;
 }
 
 a:hover {
